Alignment fix

--- a/css/StyleSheet.css
+++ b/css/StyleSheet.css
@@ -285,8 +285,8 @@ hr.botm-line3 {
     width: 190px;
     height: 190px;
     top: -10px;
-    margin-left: -80px;
-    left: 50%;
+    /* margin-left: -80px; */
+    /* left: 50%; */
 }
 
 
